2025-02-24 Gavin

	* NEWS:
	finalised for 1.101 release

	* VERSION:
	updated to 1.101

	* contribs.svn:
	Added GHSAlgo 1.0.0, Gauld, Huss and Stagnitto

2025-02-06 Gavin

	* README:
	added mention of github mirror, including the fact that it is not
	always immediate. This resolves the following problem: the mirror
	so far was not an exact mirror, because it included a mention
	of the mirror, while svn did not. From now on they will be 
	kept identical.

2025-02-05 Gavin + Matteo

	* contribs.svn:
	added SDFPlugin 1.0.1

	* NEWS:
	started preparing for 1.101 release

	* configure:
	for linux builds, changed soname in dylibopt from fastjetcontribfragile.so.0
	to libfastjetcontribfragile.so, as per request from Matthew Feickert, cf.
	https://github.com/fjcontrib/fjcontrib/issues/5 and #4

2024-12-17 Matteo Cacciari <cacciari@lpthe.jussieu.fr>

	* scripts/internal/generate-html-contents.pl
        added option to generate-html-contents.html to generate table of contribs 
        for fastjet.fr at LPTHE rather than HEPFORGE

2024-12-15  Gavin Salam  <gavin.salam@physics.ox.ac.uk>

	* VERSION:
	updated to 1.101-devel

2024-12-15 Sun  <gavin.salam@physics.ox.ac.uk>

	* configure:
	for Darwin buids, added "-Wl,-headerpad_max_install_names" to
	dynlibopt, as per request from Matthew Feickert
	
2024-12-13  Matteo, Gregory, Gavin

	* NEWS:
	* VERSION:
	prepared for 1.100 release.

	* configure:
	added check that contribs don't have both VERSION and FJCONTRIB.cfg files.

	* contribs.svn:
	* NEWS:
	updated IFNPlugin to 1.0.4 (removing spurious dependency on RecursiveTools in Makefile)

2024-12-13  Matteo Cacciari <cacciari@lpthe.jussieu.fr>

	* scripts/internal/generate-html-contents.pl
        added javascript function to sort table in contrib name
        alphabetical order and release date

2024-12-12  Matteo Cacciari <cacciari@lpthe.jussieu.fr>

	* scripts/internal/generate-html-contents.pl
	updated to also output information about dependencies and minimal
	FastJet version